# hoplite

./: .gitignore  README.md  startup.sh
FlightSystem/libhal/: .gitignore  CMakeLists.txt  README.md  application.cpp  application.hpp  conanfile.py  main.cpp
HeadBoard/: CommandHandler  CommandHandler.cpp  main.sh  requirements.txt
HeadBoard/AstraeusHandler/: AstraeusHandler  AstraeusHandler.cpp  AstreausHandler.cpp  StringToJson.cpp
HeadBoard/CommandHandling/: CommandHandling.cpp
HeadBoard/CommandHandling/ArduinoReceiver/Receiver/: Receiver.ino
HeadBoard/IPCQueue/: IPCQueue.cpp  IPCQueue.h  README.md  compile_bindings.sh
HeadBoard/PipeHandler/: PipeHandler.cpp  PipeHandler.h  PipeHandlerExample.cpp
HeadBoard/PowerSystem/: BatterySensor.h  PowerSystem  PowerSystem.cpp
HeadBoard/Radio/: PipeExample  PipeExample.cpp  PipeExample.py  Radio.py
HeadBoard/Radio/RadioVirtualEnv/: pyvenv.cfg
HeadBoard/Radio/Receiver/: Receiver.ino
HeadBoard/Scheduler/: Scheduler.cpp
HeadBoard/hoplite_env/: pyvenv.cfg
HeadBoard/lib/: pipe.h
HeadBoard/lib/IPCQueue/: IPCQueue.cpp  IPCQueue_py_bindings.cpp  compile_bindings.sh
